--- a/scStore/src/app/catalog/search/search.component.html
+++ b/scStore/src/app/catalog/search/search.component.html
@@ -24,6 +24,6 @@
   </div>
 
   <ng-template #noResults>
-    <p *ngIf="searchQuery">No results found for "{{ searchQuery }}"</p>
+    <p id="no-res" *ngIf="searchQuery">No results found for "{{ searchQuery }}"</p>
   </ng-template>
 </div>
