--- a/scStore/src/app/core/header/header.component.html
+++ b/scStore/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
           <div class="full">
             <div class="center-desk">
               <div class="logo">
-                <img src="./assets/images/logoY.png" alt="#" />
+                <img src="./assets/images/YBG_logo.png" alt="#" />
               </div>
             </div>
           </div>
