--- a/scStore/src/app/core/footer/footer.component.css
+++ b/scStore/src/app/core/footer/footer.component.css
@@ -10,7 +10,7 @@
   background: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  color: #fff;
+  color: darkblue;
   font-size: 16px;
   width: 80%;
   margin: 0 auto;
