--- a/scStore/src/app/features/seller-info/seller-info.component.css
+++ b/scStore/src/app/features/seller-info/seller-info.component.css
@@ -1,13 +1,19 @@
 table {
   width: 100%;
   height: auto;
-  color: white;
+  color: darkblue;
   text-align: center;
+  font-size: 20px;
 
 }
 
-table td{
-  border-bottom: 1px solid whitesmoke;
+.laptop_box table tr:nth-child(1) {
+  font-weight: bold;
+
+}
+
+.laptop_box table td{
+  border-bottom: 1px solid black;
   width: 10%;
   height: 80px;
 
@@ -20,20 +26,29 @@ table td{
 }
 
 .clear-btn {
-  width: 50%;
-  border: 1px solid whitesmoke;
+  width: 60%;
   border-radius: 4px;
-  background-color: transparent;
+  background-color: #48ca95;
   color: whitesmoke;
 }
+.clear-btn:hover {
+  background-color: #000;
+  transition: ease-in all 0.5s;
+  color: #fff;
+}
+
 .laptop_box p {
   text-align: center;
 }
 
 a {
-  color: whitesmoke;
+  color: darkblue;
   font-style: italic;
   font-size: 18px;
+}
+
+a:hover {
+  color: darkturquoise;
 }
 .modal {
   display: flex;
