--- a/scStore/src/app/user/user-offers/user-offers.component.css
+++ b/scStore/src/app/user/user-offers/user-offers.component.css
@@ -3,20 +3,24 @@ button {
   color: #fff;
   font-size: 20px;
   line-height: 20px;
-  background-color: #252525;
+  background-color: #48ca95;
   font-weight: 500;
   padding: 10px 0;
   margin: 10px auto 0;
-  transition: ease-in all 0.5s;
+
 }
+
+button:hover {
+  background-color: #000;
+  transition: ease-in all 0.5s;
+  color: #fff;
+}
+
 
 h2 {
-  color: whitesmoke;
+  color: darkblue;
 }
 
-button {
-  background-color: #4f4aa6;
-}
 
 
 button:hover {
