--- a/scStore/src/app/user/register/register.component.html
+++ b/scStore/src/app/user/register/register.component.html
@@ -12,13 +12,13 @@
 
       <div class="fields">
         <div class="field">
-          <input type="text" placeholder="name" name="name" ngModel #name="ngModel" required minlength="5"  [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'"/>
+          <input type="text" placeholder="name" name="name" ngModel #name="ngModel" required minlength="2"  [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'"/>
           <div class="error" *ngIf="name.touched">
             <div *ngIf="name.errors?.['required']">
               Name is required!
             </div>
             <div *ngIf="name.errors?.['minlength'] ">
-              Name must be more then 5 characters!
+              Name must be more than 2 characters!
             </div>
           </div>
         </div>
@@ -36,13 +36,13 @@
         </div>
 
         <div class="field">
-          <input type="text" name="phone" placeholder="Phone number" ngModel #phone="ngModel" required min="1" max="105"  [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
+          <input type="text" name="phone" placeholder="Phone number" ngModel #phone="ngModel" required min="1" max="10"  [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
           <div class="error" *ngIf="phone.touched">
             <div *ngIf="phone.errors?.['required']">
               Phone number is required!
             </div>
             <div *ngIf="phone.errors?.['min'] || phone.errors?.['max']">
-              Phone number must be between 1 and 105!
+              Phone number must be between 1 and 10!
             </div>
           </div>
         </div>
