--- a/scStore/src/app/user/offer/offer.component.html
+++ b/scStore/src/app/user/offer/offer.component.html
@@ -1,12 +1,12 @@
 <div class="contact">
-
+  <span><app-error-message /></span>
 
   <div class="register">
     <form #form="ngForm" (ngSubmit)="submitHandler(form)">
 
       <div class="form-header">
         <h3>Create your offer here</h3>
-        <app-error-message />
+     
       </div>
 
       <div class="fields">
