--- a/scStore/src/app/user/edit-offer/edit-offer.component.html
+++ b/scStore/src/app/user/edit-offer/edit-offer.component.html
@@ -65,14 +65,9 @@
         </div>
         <div class="button">
           <input type="submit" class="btn" value="Edit Product" />
+           <input type="submit" class="btn" [routerLink]="['/', 'device-details', deviceId]" value="Cancel" />
         </div>
-
-
       </div>
     </form>
-
-
-
-
   </div>
 </div>
