--- a/scStore/src/app/user/profile/profile.component.html
+++ b/scStore/src/app/user/profile/profile.component.html
@@ -51,20 +51,23 @@
                 Name is required!
               </div>
               <div *ngIf="name.errors?.['minlength'] ">
-                Name must be more then 2 characters!
+                At least 2 characters!
               </div>
             </div>
           </div>
 
           <div class="field">
 
-            <input type="text" name="phone"   ngModel #phone="ngModel" required min="6" max="12" [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
+            <input type="text" name="phone"   ngModel #phone="ngModel" required minlength="6" maxlength="12" [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
             <div class="error" *ngIf="phone.touched">
               <div *ngIf="phone.errors?.['required']">
                 Phone number is required!
               </div>
-              <div *ngIf="phone.errors?.['min'] || phone.errors?.['max']">
-                Phone number must be between 6 and 12!
+              <div *ngIf="phone.errors?.['minlength']">
+               At least 6 characters!
+              </div>
+              <div *ngIf="phone.errors?.['maxlength']">
+                Can not be more than 12 characters!
               </div>
             </div>
           </div>
