--- a/scStore/src/app/user/edit-offer/edit-offer.component.css
+++ b/scStore/src/app/user/edit-offer/edit-offer.component.css
@@ -3,7 +3,7 @@
   resize: vertical;
   width: 100%;
   background: transparent;
-  color: whitesmoke;
+  color: darkblue;
   text-align: center;
   border: 1px solid whitesmoke;
 }
@@ -13,4 +13,8 @@ input::placeholder {
   color:  gray;
   font-style: italic;
   opacity: 1;
+}
+
+.register form .fields .button input {
+  margin-right: 5px;
 }
