--- a/scStore/src/app/user/profile/profile.component.html
+++ b/scStore/src/app/user/profile/profile.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="isUpdating" class="loading-spinner">Updating...</div>
+
+
 <ng-container *ngIf="!showEditMode">
   <div class="three_box">
     <div class="container">
@@ -32,37 +33,48 @@
 </ng-container>
 
 <ng-container *ngIf="showEditMode">
+
+  <span><app-error-message /></span>
   <div class="contact">
     <div class="register">
       <form #form="ngForm" (ngSubmit)="submitHandler()">
 
         <div class="form-header">
           <h3>Profile Info</h3>
-          <app-error-message />
         </div>
 
         <div class="fields">
           <div class="field">
-            <input type="text" name="name"  ngModel #name="ngModel" required minlength="5" [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'" />
+            <input type="text" name="name"  ngModel #name="ngModel" appNoSpacesOrTabs appNoScripts minlength="2" maxlength="20" [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'" />
             <div class="error" *ngIf="name.touched">
-              <div *ngIf="name.errors?.['required']">
-                Name is required!
+              <div *ngIf="name.errors?.['noSpacesOrTabs'] ">
+                No empty fields allowed!
               </div>
               <div *ngIf="name.errors?.['minlength'] ">
-                Name must be more then 5 characters!
+                At least 2 characters!
               </div>
+              <div *ngIf="name.errors?.['noScripts'] ">
+                Scripts or HTML tags are not allowed!
+              </div>
+
             </div>
           </div>
 
           <div class="field">
 
-            <input type="text" name="phone"   ngModel #phone="ngModel" required min="1" max="15" [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
+            <input type="text" name="phone"   ngModel #phone="ngModel" minlength="6" maxlength="12" appNoSpacesOrTabs appNoScripts [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
             <div class="error" *ngIf="phone.touched">
-              <div *ngIf="phone.errors?.['required']">
-                Phone number is required!
+              <div *ngIf="phone.errors?.['minlength']">
+               At least 6 characters!
               </div>
-              <div *ngIf="phone.errors?.['min'] || phone.errors?.['max']">
-                Phone number must be between 1 and 105!
+              <div *ngIf="phone.errors?.['maxlength']">
+                Can not be more than 12 characters!
+              </div>
+              <div *ngIf="phone.errors?.['noSpacesOrTabs']">
+                No empty fields allowed!
+              </div>
+              <div *ngIf="phone.errors?.['noScripts'] ">
+                Scripts or HTML tags are not allowed!
               </div>
             </div>
           </div>
