--- a/scStore/src/app/user/register/register.component.html
+++ b/scStore/src/app/user/register/register.component.html
@@ -12,50 +12,61 @@
 
       <div class="fields">
         <div class="field">
-          <input type="text" placeholder="name" name="name" ngModel #name="ngModel" required minlength="5"  [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'"/>
+          <input type="text" placeholder="name" name="name" ngModel #name="ngModel" appNoSpacesOrTabs appNoScripts minlength="2" maxlength="20" [@fieldAnimation]="name.touched && name.invalid ? 'invalid' : 'valid'"/>
           <div class="error" *ngIf="name.touched">
-            <div *ngIf="name.errors?.['required']">
-              Name is required!
-            </div>
             <div *ngIf="name.errors?.['minlength'] ">
-              Name must be more then 5 characters!
+              Name must be more than 2 characters!
+            </div>
+            <div *ngIf="name.errors?.['noSpacesOrTabs'] ">
+              No empty fields allowed!
+            </div>
+            <div *ngIf="name.errors?.['noScripts'] ">
+              Scripts or HTML tags are not allowed!
             </div>
           </div>
         </div>
 
         <div class="field">
-          <input type="text" name="email" placeholder="email" ngModel #email="ngModel" required pattern="{{emailValidatorPattern}}"  [@fieldAnimation]="email.touched && email.invalid ? 'invalid' : 'valid'" />
+          <input type="text" name="email" placeholder="email" ngModel #email="ngModel" appNoSpacesOrTabs appNoScripts pattern="{{emailValidatorPattern}}"  [@fieldAnimation]="email.touched && email.invalid ? 'invalid' : 'valid'" />
           <div class="error" *ngIf="email.touched">
-            <div *ngIf="email.errors?.['required']">
-              Email is required!
+            <div *ngIf="email.errors?.['noSpacesOrTabs']">
+              No empty fields allowed!
             </div>
             <div *ngIf="email.errors?.['pattern']">
               Invalid email!
             </div>
+            <div *ngIf="email.errors?.['noScripts'] ">
+              Scripts or HTML tags are not allowed!
+            </div>
           </div>
         </div>
 
         <div class="field">
-          <input type="text" name="phone" placeholder="Phone number" ngModel #phone="ngModel" required min="1" max="105"  [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
+          <input type="text" name="phone" placeholder="Phone number" ngModel #phone="ngModel" min="1" max="9" appNoSpacesOrTabs appNoScripts [@fieldAnimation]="phone.touched && phone.invalid ? 'invalid' : 'valid'"/>
           <div class="error" *ngIf="phone.touched">
-            <div *ngIf="phone.errors?.['required']">
-              Phone number is required!
-            </div>
             <div *ngIf="phone.errors?.['min'] || phone.errors?.['max']">
-              Phone number must be between 1 and 105!
+              Phone number must be between 1 and 9!
+            </div>
+            <div *ngIf="phone.errors?.['noSpacesOrTabs']">
+              No empty fields allowed!
+            </div>
+            <div *ngIf="phone.errors?.['noScripts'] ">
+              Scripts or HTML tags are not allowed!
             </div>
           </div>
         </div>
-
         <ng-container ngModelGroup="passwords" #passwords="ngModelGroup" appAppMatchPasswords   >
           <div class="field">
-            <input type="password" name="password" placeholder="Password" ngModel #password="ngModel"  required minlength="5"  [@fieldAnimation]="password.touched && password.invalid ? 'invalid' : 'valid'" />
+            <input type="password" name="password" placeholder="Password" ngModel #password="ngModel" appNoSpacesOrTabs appNoScripts minlength="5"  [@fieldAnimation]="password.touched && password.invalid ? 'invalid' : 'valid'" />
             <div class="error" *ngIf="password.touched">
-              <div *ngIf="password.errors?.['required']">
-                Password is required!
-              </div>
               <div *ngIf="password.errors?.['minlength'] ">
                 Password must be more then 5 characters!
+              </div>
+              <div *ngIf="password.errors?.['noSpacesOrTabs']">
+                No empty fields allowed!
+              </div>
+              <div *ngIf="password.errors?.['noScripts'] ">
+                Scripts or HTML tags are not allowed!
               </div>
             </div>
           </div>
@@ -64,7 +75,7 @@
             <input type="password" name="repeatPassword" placeholder="Repeat Password" ngModel #repeatPassword="ngModel" required  [@fieldAnimation]="repeatPassword.touched && repeatPassword.invalid ? 'invalid' : 'valid'"/>
             <div class="error" *ngIf="repeatPassword.touched">
               <div *ngIf="repeatPassword.errors?.['required']">
-                Repeat password is required!
+                No empty fields allowed!
               </div>
               <div *ngIf="passwords.errors?.['passwordCheck'] && (repeatPassword.dirty || repeatPassword.touched)">
                 Passwords don't match!
